# json-pole-parser

./: pyproject.toml
json_pole_parser/: main.py
